--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Text::WordDiff.
 
 0.02
+      - Fixed example CSS so that insert is green and delete is red, instead
+        of vice-versa.
 
 0.01  2005-09-07T19:05:08
       - Initial public release.
