--- a/README
+++ b/README
@@ -339,7 +339,7 @@ Support
 
     <https://svn.kineticode.com/Text-WordDiff/trunk/>
 
-    Patches against SVN::Notify are welcome. Please send bug reports to
+    Patches against Text::WordDiff are welcome. Please send bug reports to
     <bug-text-worddiff@rt.cpan.org>.
 
 Author
