--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Text::WordDiff.
 
 0.04
       - Fixed a pasto in the "Support" section of the documentation.
+      - Fixed an encoding-related test failure on Perl 5.6.2. Thanks to
+        David Cantrell for the usual QA.
 
 0.03  2008-05-05T03:27:04
       - Added the "configure_requires" and "recommends" parameters to
