--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Text::WordDiff.
 
 0.07
       - Removed `.gitignore` file.
+      - Added proper links to the GitHub repository.
+      - Added bug reporting and repository metadata.
 
 0.06  2011-06-18T22:20:53
       - Moved repository to GitHub.
