--- a/Changes
+++ b/Changes
@@ -4,9 +4,7 @@ Revision history for Perl extension Text::WordDiff.
       - Fixed a typo, thanks to gregor herrmann of the Debian project.
       - Update project metadata: The Perl Shop is now project
         maintainer, distribution homepage is now on MetaCPAN, and the
-        project is now explicitly licensed under the Artistic License 2.0
-        (instead of "the same terms as Perl itself") with an appropriate
-        LICENSE file.
+        project now includes an appropriate LICENSE file.
 
 0.08  2011-10-19T22:08:34Z
       - Control and punctuation characters are now treated as standalone
